src/Containers/App.css
/* -------------- General styles ------------------*/
* {
  margin: 0; 
}

.App {
  height: 100%; 
  text-align: center;
  font-family: 'Open Sans', sans-serif; 
  background-color: rgb(42, 82, 114); 
  color: white; 
}

button {
  cursor: pointer;
}

i {
  cursor: pointer; 
}

span {
  user-select: none;
}

/*-------------- Intro section ------------------*/
.intro h1 {
  padding: 40px 0 15px 0; 
  font-size: 50px; 
  font-weight: 800; 
}

.intro p {
  font-size: 14px; 
  font-style: italic; 
}

.intro button {
  margin: 15px auto; 
  font-size: 14px; 
  background-color: rgb(165, 114, 18); 
  color: white; 
  border: 2px solid white; 
  border-radius: 5px; 
  padding: 10px; 

}

/*-----------------instructions-----------------*/
.hide-instructions {
  display: none; 
}

.show-instructions {
  display: block; 
  background-color: rgb(199, 137, 23); 
  width: 60%; 
  margin: 5px auto 30px auto; 
  border: 5px solid white; 
  border-radius: 10px; 
  list-style: none; 
  font-size: 15px; 
  color: #422727; 
  padding: 15px 0; 
}

.show-instructions li {
  margin: 10px auto; 
}

.fa-chevron-circle-down {
  font-size: 25px; 
  color: white; 
}

/*----------------length control section ----------------*/
.length-control {
  width: 440px; 
  margin: 20px auto;
  display: flex; 
}

.length-control h2 {
  font-size: 24px; 
}

.work-length-control {
  margin-right: 100px; 
}

.length-control i {
  font-size: 40px; 
  margin: 10px; 
}

.length-control span {
  font-size: 35px; 
  font-weight: bold; 
  display: inline-block; 
  width: 41px; 
}

/*---------------------timer section----------------------*/
.timer {
  width: 300px; 
  margin: 40px auto 20px auto; 
  padding: 15px 0; 
  border: 5px solid white; 
  border-radius: 25px; 
}

.timer-title h3 {
  font-size: 24px; 
}

.session-timer-class {
  color: rgb(199, 88, 23); 
}

.break-timer-class {
  color: #62eb80; 
}

.remaining-time {
  font-size: 50px; 
}

.white-timer {
  color: white; 
}

.red-timer {
  color: rgb(201, 57, 57); 
}

/*------------------- play buttons section ------------------*/
.play-buttons {
  margin: 10px 0; 
}

.play-buttons i {
  font-size: 30px; 
  margin: 0 15px 30px 15px; 
}

/*--------------------footer------------------------------*/
footer {
  color: rgb(223, 152, 20); 
  font-size: 14px; 
  padding-bottom: 20px; 
}

/*------------------@media--------------------------------*/
@media(max-width: 500px) {
  .length-control {
    width: 400px; 
    display: block; 
  }

  .work-length-control {
    margin: 20px auto; 
  }

  .break-length-control {
    margin: 0 auto; 
  }

  .show-instructions {
    width: 90%; 
  }
}

